Added coral text

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        li {color: coral;}
+    </style>
 </head>
 <body>
     <h1>This is my <em>FIRST</em> <strong>Trial</strong> website boiii</h1>
     <p>You tryna scrap? Cuz I'll throw hands bruv</p>
+    <ol>
+        <li>She's my cheery pie</li>
+        <li>Never think she'd want such a sweet surpirse.</li>
+    </ol>
 </body>
 </html>
