--- a/Playing Around/index.html
+++ b/Playing Around/index.html
@@ -10,6 +10,7 @@
     </style>
 </head>
 <body>
+    <script> console.log("hello but from inside the web page")</script>
     <h1>This is my <em>FIRST</em> <strong>Trial</strong> website boiii</h1>
     <p>You tryna scrap? Cuz I'll throw hands bruv</p>
     <ol>
